--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react-router-dom": "^4.3.1",
     "react-s3-uploader": "^4.8.0",
     "react-scripts": "1.1.4",
+    "react-slick": "^0.23.1",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
-    "redux-promise-middleware": "^5.1.1"
+    "redux-promise-middleware": "^5.1.1",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
