--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.0",
     "react-dropzone": "^4.2.11",
+    "react-parallax": "^1.8.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-s3-uploader": "^4.8.0",
