--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-parallax": "^1.8.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-router-hash-link": "^1.2.0",
     "react-s3-uploader": "^4.8.0",
     "react-scripts": "1.1.4",
     "react-slick": "^0.23.1",
