--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/fontawesome-free-regular": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/react-fontawesome": "0.0.20",
+    "animate.css": "^3.7.0",
     "aphrodite": "^2.2.2",
     "aws-sdk": "^2.257.1",
     "axios": "^0.18.0",
@@ -18,6 +19,7 @@
     "express-session": "^1.15.6",
     "massive": "^5.0.0",
     "react": "^16.4.0",
+    "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.0",
     "react-dropzone": "^4.2.11",
