--- a/package.json
+++ b/package.json
@@ -7,31 +7,34 @@
     "@fortawesome/fontawesome-free-brands": "^5.0.13",
     "@fortawesome/fontawesome-free-regular": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "@fortawesome/react-fontawesome": "0.0.20",
+    "@fortawesome/fontawesome-svg-core": "^1.2.5",
+    "@fortawesome/free-brands-svg-icons": "^5.4.0",
+    "@fortawesome/free-regular-svg-icons": "^5.4.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "animate.css": "^3.7.0",
-    "aphrodite": "^2.2.2",
-    "aws-sdk": "^2.257.1",
+    "aphrodite": "^2.2.3",
+    "aws-sdk": "^2.330.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
-    "dotenv": "^6.0.0",
+    "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "massive": "^5.0.0",
-    "react": "^16.4.0",
+    "massive": "^5.5.0",
+    "react": "^16.5.2",
     "react-animate-on-scroll": "^2.1.5",
-    "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.4.0",
-    "react-dropzone": "^4.2.11",
-    "react-parallax": "^1.8.0",
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.5.2",
+    "react-dropzone": "^6.0.2",
+    "react-parallax": "^2.0.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-router-hash-link": "^1.2.0",
     "react-s3-uploader": "^4.8.0",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^2.0.4",
     "react-slick": "^0.23.1",
     "redux": "^4.0.0",
-    "redux-devtools-extension": "^2.13.2",
+    "redux-devtools-extension": "^2.13.5",
     "redux-promise-middleware": "^5.1.1",
     "slick-carousel": "^1.8.1"
   },
@@ -42,5 +45,11 @@
     "eject": "react-scripts eject"
   },
   "main": "server/personalIndex.js",
-  "proxy": "http://localhost:3010"
+  "proxy": "http://localhost:3010",
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
