--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "massive": "^5.5.0",
     "react": "^16.5.2",
     "react-animate-on-scroll": "^2.1.5",
+    "react-background-slideshow": "^1.0.4",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
     "react-dropzone": "^6.0.2",
@@ -32,6 +33,7 @@
     "react-router-hash-link": "^1.2.0",
     "react-s3-uploader": "^4.8.0",
     "react-scripts": "^2.0.4",
+    "react-scrollable-anchor": "^0.6.1",
     "react-slick": "^0.23.1",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
