--- a/package.json
+++ b/package.json
@@ -3,42 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-brands": "^5.0.13",
-    "@fortawesome/fontawesome-free-regular": "^5.0.13",
-    "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "@fortawesome/fontawesome-svg-core": "^1.2.5",
-    "@fortawesome/free-brands-svg-icons": "^5.4.0",
-    "@fortawesome/free-regular-svg-icons": "^5.4.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-brands-svg-icons": "^5.5.0",
+    "@fortawesome/free-regular-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "animate.css": "^3.7.0",
     "aphrodite": "^2.2.3",
-    "aws-sdk": "^2.330.0",
-    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
     "dotenv": "^6.1.0",
-    "express": "^4.16.3",
-    "express-session": "^1.15.6",
-    "massive": "^5.5.0",
-    "react": "^16.5.2",
+    "express": "^4.16.4",
+    "react": "^16.6.3",
     "react-animate-on-scroll": "^2.1.5",
     "react-background-slideshow": "^1.0.4",
     "react-bootstrap": "^0.32.4",
-    "react-dom": "^16.5.2",
-    "react-dropzone": "^6.0.2",
-    "react-parallax": "^2.0.0",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "react-router-hash-link": "^1.2.0",
-    "react-s3-uploader": "^4.8.0",
-    "react-scripts": "^2.0.4",
+    "react-dom": "^16.6.3",
+    "react-parallax": "^2.0.1",
+    "react-scripts": "^2.1.1",
     "react-scrollable-anchor": "^0.6.1",
-    "react-slick": "^0.23.1",
-    "redux": "^4.0.0",
-    "redux-devtools-extension": "^2.13.5",
-    "redux-promise-middleware": "^5.1.1",
-    "slick-carousel": "^1.8.1"
+    "react-slick": "^0.23.2"
   },
   "scripts": {
     "start": "react-scripts start",
