--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-parallax": "^2.0.1",
     "react-scripts": "^2.1.1",
     "react-scrollable-anchor": "^0.6.1",
-    "react-slick": "^0.23.2"
+    "react-slick": "^0.23.2",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
