--- a/package.json
+++ b/package.json
@@ -4,23 +4,24 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free-brands": "^5.0.13",
-    "@fortawesome/fontawesome-svg-core": "^1.2.8",
-    "@fortawesome/free-brands-svg-icons": "^5.5.0",
-    "@fortawesome/free-regular-svg-icons": "^5.5.0",
-    "@fortawesome/react-fontawesome": "^0.1.3",
-    "animate.css": "^3.7.0",
-    "aphrodite": "^2.2.3",
-    "body-parser": "^1.18.3",
-    "chalk": "^2.4.1",
-    "dotenv": "^6.1.0",
-    "express": "^4.16.4",
-    "react": "^16.6.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-regular-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
+    "animate.css": "^3.7.2",
+    "aphrodite": "^2.4.0",
+    "body-parser": "^1.19.0",
+    "chalk": "^2.4.2",
+    "dotenv": "^6.2.0",
+    "express": "^4.17.1",
+    "npm-update": "^2.1.0",
+    "react": "^16.11.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-background-slideshow": "^1.0.4",
     "react-bootstrap": "^0.32.4",
-    "react-dom": "^16.6.3",
-    "react-parallax": "^2.0.1",
-    "react-scripts": "^2.1.1",
+    "react-dom": "^16.11.0",
+    "react-parallax": "^2.2.4",
+    "react-scripts": "^2.1.8",
     "react-scrollable-anchor": "^0.6.1",
     "react-slick": "^0.23.2",
     "slick-carousel": "^1.8.1"
